feat(eventpolicy): transactional outbox (docs/2.md §9) + lazy handler resolution (#470)
Outbox decouples save from policy side effects (docs/2.md §9): enqueue writes a PENDING event in
the caller's transaction; processPending runs each event's run-and-execute and marks
PROCESSED/FAILED.
- ab_drt_outbox table (unique tenant+event_id) + entity/mapper + OutboxService/Impl
  (enqueue idempotent in-tx; processPending per-item try/catch, §8 no-swallow)
- PolicyExecutor: resolve ActionHandler beans LAZILY per execution (Supplier) instead of a
  snapshot at bean creation — a snapshot can miss handler beans depending on init order
  (caught while wiring the outbox IT). Backward-compatible: List constructor kept for unit tests.

2 real-stack ITs (enqueue->PENDING->processPending->PROCESSED + exec-log row proves the
outbox->runAndExecute->executor chain; enqueue idempotency). Full eventpolicy.* green
(run-execute IT unaffected by the lazy refactor); boundary + schema-sql (294 tables) green.

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>